[gd_scene format=3 uid="uid://cnlw51lbke217"]

[ext_resource type="Script" uid="uid://dnwds71gxrgxp" path="res://scripts/book.gd" id="1_book"]
[ext_resource type="Texture2D" uid="uid://clltnxkk0o83m" path="res://assets/images/book.png" id="2_icon"]
[ext_resource type="Texture2D" uid="uid://dfxmuotocpry7" path="res://assets/images/book-tab-1.png" id="3_tab1"]

[node name="Book" type="Control" unique_id=1724954004]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_book")

[node name="BookIcon" type="TextureButton" parent="." unique_id=1912612774]
layout_mode = 0
offset_left = 695.0
offset_top = 291.0
offset_right = 958.0
offset_bottom = 546.0
texture_normal = ExtResource("2_icon")
stretch_mode = 0

[node name="BookPanel" type="Control" parent="." unique_id=112787407]
anchors_preset = 0
offset_left = -369.0
offset_top = -299.0
offset_right = 331.0
offset_bottom = 301.0

[node name="BookSprite" type="Sprite2D" parent="BookPanel" unique_id=1689839213]
position = Vector2(366, 228)
scale = Vector2(1.4528345, 1.4487282)
texture = ExtResource("3_tab1")

[node name="Tab1Button" type="Button" parent="BookPanel" unique_id=536761341]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = -141.0
offset_top = -203.0
offset_right = -73.0
offset_bottom = -157.0
text = "Tab1"

[node name="Tab2Button" type="Button" parent="BookPanel" unique_id=987005957]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = -50.0
offset_top = -201.0
offset_right = 22.0
offset_bottom = -157.0
text = "Tab2"

[node name="Tab3Button" type="Button" parent="BookPanel" unique_id=1783885628]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 46.0
offset_top = -203.0
offset_right = 118.0
offset_bottom = -157.0
text = "Tab3"

[node name="Tab4Button" type="Button" parent="BookPanel" unique_id=1761012952]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 136.0
offset_top = -203.0
offset_right = 210.0
offset_bottom = -159.0
text = "Tab4"

[node name="CloseButton" type="Button" parent="BookPanel" unique_id=732255652]
visible = false
layout_mode = 0
offset_left = 901.0
offset_top = -215.0
offset_right = 961.0
offset_bottom = -175.0
text = "X"

[connection signal="pressed" from="BookIcon" to="." method="_on_book_icon_pressed"]
[connection signal="pressed" from="BookPanel/Tab1Button" to="." method="_on_tab_1_pressed"]
[connection signal="pressed" from="BookPanel/Tab2Button" to="." method="_on_tab_2_pressed"]
[connection signal="pressed" from="BookPanel/Tab3Button" to="." method="_on_tab_3_pressed"]
[connection signal="pressed" from="BookPanel/Tab4Button" to="." method="_on_tab_4_pressed"]
[connection signal="pressed" from="BookPanel/CloseButton" to="." method="_on_close_button_pressed"]
